fixed the white box appearing at the bottom of the screen when scrolling on all pages on mobile platform

--- a/css/crew.css
+++ b/css/crew.css
@@ -11,7 +11,6 @@ body{
     background: url('../assets/crew/background-crew-desktop.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
 }
 
 header{
