--- a/css/destination.css
+++ b/css/destination.css
@@ -11,7 +11,6 @@ body{
     background: url('../assets/destination/background-destination-desktop.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
 }
 
 header{
